k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-task-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-task-api
  template:
    metadata:
      labels:
        app: mini-task-api
    spec:
      containers:
      - name: mini-task-api
        image: ghcr.io/kiryue0/mini-task-api:v0.1
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-giris-bilgilerim
