k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-task-api
spec:
  type: NodePort
  selector:
    app: mini-task-api
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
