k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-task-api
  labels:
    app.kubernetes.io/name: mini-task-api
spec:
  ingressClassName: traefik
  rules:
  - host: mini-task-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-task-api
            port: 
              number: 80
